--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ rpassword = "7.3.1"
 serde = "1.0.197"
 serde_json = "1.0.114"
 dirs = "5.0.1"
+argon2 = "0.5.3"
+nix = { version = "0.28.0", features = ["user"] }
