--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,11 @@ clap = "4.5.1"
 rand = "0.8.5"
 ring = "0.17.8"
 rpassword = "7.3.1"
-serde = "1.0.197"
+serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 dirs = "5.0.1"
 argon2 = "0.5.3"
 nix = { version = "0.28.0", features = ["user"] }
+uuid = { version = "1.7.0", features = ["v4"] }
+prettytable = "0.10.0"
+dialoguer = "0.11.0"
